--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     </head>
     <body>
         <header>
-            <div>
+            <div class="nome">
                 <a href="index.html">Jorge Alberto</a>
             </div>
-            <div>
+            <div class="menu">
                 <a href="sobre.html">Sobre Mim</a>
                 <a href="formacao.html">Formação</a>
                 <a href="portifolio.html">Portifólio</a>
