--- a/index.html
+++ b/index.html
@@ -18,5 +18,20 @@
                 <a href="contato.html">Contato</a>
             </div>
         </header>
+
+        <div class="root">
+            <section>
+                <h1>Jorge Alberto</h1>
+                <div>
+                    <div class="foto-perfil">
+                        <img src="./public/perfil.jpg" alt="">
+                    </div>
+                    <div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero quas voluptates, minus debitis exercitationem sequi ullam eaque sunt fugit, itaque nam quaerat mollitia saepe labore beatae molestiae praesentium pariatur deserunt!</p>
+                    </div>
+                </div>
+            </section>
+        </div>
+
     </body>
 </html>
