adiciona conteúdo as páginas

--- a/formacao.html
+++ b/formacao.html
@@ -24,10 +24,11 @@
                 <h1>Formação</h1>
                 <div style="display: flex; flex-direction: column;">
                     <ul>
-                        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, provident! Praesentium quae labore cum expedita quasi facilis aliquid eos ipsam. Praesentium amet inventore perferendis quas aliquid quam consectetur sunt deleniti.</li>
-                        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, provident! Praesentium quae labore cum expedita quasi facilis aliquid eos ipsam. Praesentium amet inventore perferendis quas aliquid quam consectetur sunt deleniti.</li>
-                        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, provident! Praesentium quae labore cum expedita quasi facilis aliquid eos ipsam. Praesentium amet inventore perferendis quas aliquid quam consectetur sunt deleniti.</li>
-                        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, provident! Praesentium quae labore cum expedita quasi facilis aliquid eos ipsam. Praesentium amet inventore perferendis quas aliquid quam consectetur sunt deleniti.</li>
+                        <li>Técnico em metalurgia.</li>
+                        <li>Técnico em fundição.</li>
+                        <li>Inspetor de qualidade.</li>
+                        <li>Engenharia de Software (Estudante).</li>
+                        <li>Tatuador</li>
                     </ul>
                 </div>
             </section>
