--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <img src="./public/perfil.jpg" alt="">
                     </div>
                     <div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero quas voluptates, minus debitis exercitationem sequi ullam eaque sunt fugit, itaque nam quaerat mollitia saepe labore beatae molestiae praesentium pariatur deserunt!</p>
+                        <p>&emsp;Meu nome é Jorge Alberto, fiz essa página para atividade prática da máteria de "aplicações web e móveis" do curso de engenharia de software, tudo nessa página foi feita para aprendizagem didática.  </p>
                     </div>
                 </div>
             </section>
