--- a/sobre.html
+++ b/sobre.html
@@ -25,10 +25,12 @@
                 <!-- CSS Inline para modificar alinhamento dos itens -->
                 <div style="display: flex; flex-direction: column;">
                     <div class="foto-perfil">
-                        <img src="./public/perfil.jpg" alt="">
+                        <img src="./public/perfil.jpg" alt="" style="width: 150px;">
                     </div>
-                    <div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero quas voluptates, minus debitis exercitationem sequi ullam eaque sunt fugit, itaque nam quaerat mollitia saepe labore beatae molestiae praesentium pariatur deserunt!</p>
+                    <div style="display: flex; flex-direction: column;gap: 5px;">
+                        <p>&emsp;Meu nome é Jorge Alberto, tenho 39 anos e sou casado. Atualmente, trabalho na área metalúrgica, onde tenho desenvolvido minha carreira com dedicação e competência. Nas horas vagas, dedico-me à arte da <a href="portifolio.html" style="color: #FF7B00;">tatuagem</a>, uma paixão que me permite expressar minha criatividade e conectar-me com as pessoas de uma maneira única. </p>
+                        <p>&emsp;Além disso, estou cursando Engenharia de Software na faculdade, com o objetivo de mudar de área e explorar as vastas oportunidades oferecidas pelo setor de tecnologia. Com muita determinação e empenho, estou adquirindo novas habilidades e conhecimentos que me ajudarão a construir um futuro promissor nessa nova trajetória profissional.
+                        </p>
                     </div>
                 </div>
             </section>
