--- a/portifolio.html
+++ b/portifolio.html
@@ -1,37 +1,39 @@
 <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css">
-        <title>Jorge Alberto</title>
-    </head>
-    <body>
-        <header>
-            <div class="nome">
-                <a href="index.html">Jorge Alberto</a>
-            </div>
-            <div class="menu">
-                <a href="sobre.html">Sobre Mim</a>
-                <a href="formacao.html">Formação</a>
-                <a href="portifolio.html">Portifólio</a>
-                <a href="contato.html">Contato</a>
-            </div>
-        </header>
-
-        <div class="root">
-            <section>
-                <h1>Portifólio</h1>
-                <div>
-                    <div>
-                        <img src="./public/sonic.png" alt="">
-                    </div>
-                    <div>
-                        <img src="./public/aguia.png" alt="">
-                    </div>
-                </div>
-            </section>
+<html lang="en">
+<head>
+    <meta charset="UTF-8"> <!-- Define a codificação de caracteres para UTF-8 -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Define a viewport para responsividade -->
+    <link rel="stylesheet" href="style.css"> <!-- Link para o arquivo de estilo CSS externo -->
+    <title>Jorge Alberto</title> <!-- Título da página exibido na aba do navegador -->
+</head>
+<body>
+    <header>
+        <div class="nome">
+            <a href="index.html">Jorge Alberto</a> <!-- Link para a página inicial -->
         </div>
+        <div class="menu">
+            <!-- Links de navegação para outras seções do site -->
+            <a href="sobre.html">Sobre Mim</a>
+            <a href="formacao.html">Formação</a>
+            <a href="portifolio.html">Portifólio</a>
+            <a href="contato.html">Contato</a>
+        </div>
+    </header>
 
-    </body>
+    <div class="root">
+        <section>
+            <h1>Portifólio</h1> <!-- Título da seção "Portifólio" -->
+            <div>
+                <!-- Container para imagens do portfólio -->
+                <div>
+                    <img src="./public/sonic.png" alt=""> <!-- Imagem do portfólio -->
+                </div>
+                <div>
+                    <img src="./public/aguia.png" alt=""> <!-- Imagem do portfólio -->
+                </div>
+            </div>
+        </section>
+    </div>
+
+</body>
 </html>
